smbd/trans2: add a useful diagnostic for files with bad encoding

Catch conversion error and log the path of the offending file.

Bug: https://bugzilla.samba.org/show_bug.cgi?id=11323

Signed-off-by: Ralph Boehme <slow@samba.org>
Reviewed-by: Jeremy Allison <jra@samba.org>

Autobuild-User(master): Jeremy Allison <jra@samba.org>
Autobuild-Date(master): Tue Jun  9 21:00:02 CEST 2015 on sn-devel-104

(cherry picked from commit 0615b72a6b62d590831f1c24c5678dd29b9a2338)